--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/content": "^1.3.2",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "date-fns": "^2.16.1",
     "nuxt": "^2.13.0",
     "reading-time": "^1.2.0"
   },
