--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.3.2",
+    "@nuxtjs/feed": "^2.0.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "@nuxtjs/sitemap": "^2.4.0",
     "date-fns": "^2.16.1",
     "nuxt": "^2.13.0",
     "reading-time": "^1.2.0"
